# IsothermLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Exemplos/: CMakeLists.txt
Exemplos/TwoParameters/: CMakeLists.txt
Exemplos/TwoParameters/DubininRadushkevich/: CMakeLists.txt  DubininRadushkevich  DubininRadushkevich.cpp
old/: Doxyfile
old/Exemplos/: CMakeLists.txt
old/Exemplos/TwoParameters/: CMakeLists.txt
old/Exemplos/TwoParameters/DubininRadushkevich/: CMakeLists.txt  DubininRadushkevich.cpp
old/IsothermLib/: CMakeLists.txt
old/IsothermLib/include/: Isotherm.h
old/IsothermLib/include/Error/: IsoException.h  IsothermError.h
old/IsothermLib/include/Isotherm/OneParameter/: Henry.h  OneParameter.h
old/IsothermLib/include/Isotherm/TwoParameters/: DubininRadushkevich.h  Elovich.h  Freundlich.h  Halsey.h  HarkinJura.h  Jovanovic.h  Langmuir.h  Temkin.h  TwoParameters.h
old/IsothermLib/include/Misc/: Group.h  ID.h  Misc.h  NewtonRaphson.h  SourceInfo.h  Type.h
old/IsothermLib/src/Error/: IsoException.cpp  IsothermError.cpp
old/IsothermLib/src/Isotherm/: Isotherm.cpp
old/IsothermLib/src/Isotherm/OneParameter/: Henry.cpp  OneParameter.cpp
old/IsothermLib/src/Isotherm/TwoParameters/: DubininRadushkevich.cpp  Elovich.cpp  Freundlich.cpp  Halsey.cpp  HarkinJura.cpp  Jovanovic.cpp  Langmuir.cpp  Temkin.cpp  TwoParameters.cpp
old/IsothermLib/src/Misc/: Misc.cpp  NewtonRaphson.cpp  SourceInfo.cpp
old/IsothermLibTest/: CMakeLists.txt  IsothermLib.xlsx
old/IsothermLibTest/OneParameter/: CMakeLists.txt
old/IsothermLibTest/OneParameter/TesteHenry/: CMakeLists.txt  TesteHenry.cpp
old/IsothermLibTest/TwoParameters/: CMakeLists.txt
old/IsothermLibTest/TwoParameters/TesteDubininRadushkevich/: CMakeLists.txt  DubininRadushkevich.mw  TesteDubininRadushkevich.cpp
old/IsothermLibTest/TwoParameters/TesteElovich/: CMakeLists.txt  Elovich.mw  TesteElovich.cpp
old/IsothermLibTest/TwoParameters/TesteFreundlich/: CMakeLists.txt  Freundlich.mw  TesteFreundlich.cpp
old/IsothermLibTest/TwoParameters/TesteHalsey/: CMakeLists.txt  Halsey.mw  TesteHalsey.cpp
old/IsothermLibTest/TwoParameters/TesteHarkinJura/: CMakeLists.txt  HarkinJura.mw  TesteHarkinJura.cpp
old/IsothermLibTest/TwoParameters/TesteJovanovic/: CMakeLists.txt  Jovanovic.mw  TesteJovanovic.cpp
old/IsothermLibTest/TwoParameters/TesteLangmuir/: CMakeLists.txt  Langmuir.mw  TesteLangmuir.cpp
old/IsothermLibTest/TwoParameters/TesteTemkin/: CMakeLists.txt  Temkin.mw  TesteTemkin.cpp
